<resources>
    <string name="app_name05">Tutorial 05</string>
    <string name="app_name06">Tutorial 06</string>
    <string name="app_name07">Tutorial 07</string>
    <string name="app_name08">Tutorial 08</string>
    <string name="app_name09">Tutorial 09</string>
    <string name="app_name10">Tutorial 10</string>

    <!-- Splash Screen -->
    <string name="tutorial_04">Welcome!</string>

    <!-- Login Page  -->
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_login">User Login</string>
    <string name="login_btn">Login</string>
    <string name="registerme">Rgeistration from here....</string>

    <!-- Signup Page  -->
    <string name="signup_email">Enter Email as Username</string>
    <string name="signup_password">Enter Password</string>
    <string name="signup_user">User Signup</string>
    <string name="signup_btn">Register me</string>
    <string name="signup_txt">Rgeistration Form</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="branch_ce_it">Branch CE/IT</string>
    <string name="status">Profile Status Active/Inactive</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login_link">Login from here....</string>
    <!-- Spinner Value -->
    <string-array name="city_names">
        <item>Select Your City...</item>
        <item>Rajkot</item>
        <item>Jamnagar</item>
        <item>Junagath</item>
        <item>Diu</item>
        <item>Ahmedabad</item>
        <item>Baroda</item>
        <item>Other</item>
    </string-array>
    <!-- Welcome Page -->
    <string name="welcome">Welcome!!</string>
    <!-- File Handling -->
    <string name="hint_string">Enter text here...</string>
    <string name="name">Name</string>
    <string name="file_view">READ ASSETS</string>
    <string name="file_read">File Read</string>
    <string name="textview">TextView</string>
    <string name="file_write">Write File</string>
    <string name="empty"></string>
    <string name="first_textview">First TextView</string>
    <string name="second_textview">Second TextView</string>

</resources>