<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/scrollview"
        style="@style/layout_style2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/linearlayout"
            style="@style/layout_style"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/login_textview"
                style="@style/header_textview_style"
                android:text="@string/user_login" />

            <EditText
                android:id="@+id/email"
                style="@style/edittext_style"
                android:autofillHints=""
                android:drawableStart="@drawable/email"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/edittext_style"
                android:autofillHints=""
                android:drawableStart="@drawable/password"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:longClickable="false" />

            <Button
                android:id="@+id/submit"
                style="@style/button_style"
                android:text="@string/login_btn" />

            <TextView
                android:id="@+id/signup_link"
                style="@style/textview_style"
                android:clickable="true"
                android:onClick="signup_link"
                android:gravity="center"
                android:text="@string/registerme"
                tools:ignore="OnClick" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>