<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileManagement">

    <EditText
        android:id="@+id/editTextDataFile"
        style="@style/edittext_style"
        android:autofillHints=""
        android:hint="@string/hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/readJSON_Filebtn"
        style="@style/button_style"
        android:onClick="viewfile"
        android:text="@string/file_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataFile"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/writeFilebtn"
        style="@style/button_style"
        android:layout_marginTop="10dp"
        android:onClick="writefile"
        android:text="@string/file_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readJSON_Filebtn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/readFilebtn"
        style="@style/button_style"
        android:layout_marginTop="10dp"
        android:onClick="readfile"
        android:text="@string/file_read"
        app:layout_constraintBottom_toTopOf="@+id/fileViewScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeFilebtn"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/fileViewScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readFilebtn">

        <TextView
            android:id="@+id/filesView"
            style="@style/textview_style"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>